correcting position of social media links in footer, aligned about form centre

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,8 +308,8 @@ body {
 .about-section {
 background-color: #d6efed;
 background-image: url("../images/moonbeamlogo-transparent.png");
-background-size: cover;
-
+background-size: contain;
+background-repeat: no-repeat;
 }
 
 .about-shop-link {
@@ -341,6 +341,8 @@ background-size: cover;
     width: 95%;
   }
 }
+
+
 
 /*---------------------------------------------------------------------------------------------------------contact page*/
 
@@ -423,11 +425,6 @@ background-size: cover;
   }
 }
 
-.modalbutton {
-    margin-top: -3em;
-    margin-left: 1em;
-    
-}
 
 
 /*------------------------------------------------------------------------------shop hoverstuff*/
@@ -489,21 +486,19 @@ a:hover {
     width: 100%;
     background-color: #fff;
     text-align: center;
-    padding: 2em;
     vertical-align: middle;
-    margin-top: 0.5em;
+    margin-top: 1.5em;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 1em;
     display: block;
-    bottom: 0;
-      left: 0;
-        clear: both;
+
 }
 
 
 .footer-icons a {
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     color: #bc772a;
 }
 
